Do not trim whitespaces from filenames.

BUG:88575
REVIEW:100943
FIXED-IN:4.6.2