kioslave/ftp/ftp.cpp
@@ -655,7 +655,7 @@ void Ftp::ftpAutoLoginMacro ()
         // TODO: Add support for arbitrary commands
         // besides simply changing directory!!
         if ( (*it).startsWith( QLatin1String("cwd") ) )
-          ftpFolder( (*it).mid(4).trimmed(), false );
+          ftpFolder( (*it).mid(4), false );
       }
 
       break;
@@ -1601,7 +1601,7 @@ bool Ftp::ftpReadDir(FtpEntry& de)
           continue; // Don't trick us!
         // Some sites put more than one space between the date and the name
         // e.g. ftp://ftp.uni-marburg.de/mirror/
-        de.name     = remoteEncoding()->decode(tmp.trimmed());
+        de.name     = remoteEncoding()->decode(tmp);
       }
 
       de.type = S_IFREG;
